--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.10",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
     "d3-tile": "^1.0.0",
